# Interactive_Chess

./: .gitignore  .travis.yml  LICENSE  README.md  build_opencv.sh
ChessPieceDetector/: ChessPieceDetector.sln
ChessPieceDetector/ChessPieceDetector/: CMakeLists.txt  ChessPieceDetector.rc  ChessPieceDetector.vcxproj  ChessPieceDetector.vcxproj.filters  ImageProcessor.cpp  ImageProcessor.h  Observable.h  Vector2.h  Video.h  resource.h
ChessPieceDetector/include/: ErrorCode.h  TransmissionService.h
ChessPieceDetector/lib/: opencv_world400d.lib
ChessVisualizer/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  BoardUtility.h  Cell.cpp  Cell.h  CellColor.h  ChessController.cpp  ChessController.h  ChessGame.cpp  ChessGame.h  ChessVisualizer.pro  ChessWindow.cpp  ChessWindow.h  GameResult.h  InformationModal.cpp  InformationModal.h  King.cpp  King.h  Knight.cpp  Knight.h  LShapedMovementStrategy.cpp  LShapedMovementStrategy.h  LineMovementStrategy.cpp  LineMovementStrategy.h  MathUtils.h  MovementStrategy.cpp  MovementStrategy.h  NullPiece.cpp  NullPiece.h  Observable.h  Observer.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  PieceColor.h  Player.cpp  Player.h  (+16 more)
ChessVisualizer/lib/: NetworkLibrary.lib
InteractionChessLauncher/: InteractionChessLauncher.sln
InteractionChessLauncher/InteractionChessLauncher/: ChildProcess.cpp  ChildProcess.h  InteractionChessLauncher.rc  InteractionChessLauncher.vcxproj  InteractionChessLauncher.vcxproj.filters  main.cpp  resource.h  resource3.h
NetworkLibrary/: NetworkLibrary.sln
NetworkLibrary/NetworkLibrary/: Address.cpp  Address.h  CMakeLists.txt  Client.cpp  Client.h  ConnectionInternals.h  ErrorCode.h  NetworkError.cpp  NetworkError.h  NetworkLibrary.vcxproj  NetworkLibrary.vcxproj.filters  SerialService.cpp  Server.cpp  Server.h  SocketConnection.cpp  SocketConnection.h  SocketWrapper.cpp  SocketWrapper.h  TransmissionInternals.h  TransmissionService.cpp  TransmissionService.h  main.cpp
OpenCV_practice/: OpenCV_practice.sln
OpenCV_practice/OpenCV_practice/: Block.cpp  Block.h  CMakeLists.txt  DefaultPath.h  Directory.cpp  Directory.h  ImageProcess.cpp  ImageProcessor.cpp  ImageProcessor.h  MathUtils.h  Observer.h  OpenCVController.cpp  OpenCVController.h  OpenCV_practice.vcxproj  OpenCV_practice.vcxproj.filters  Vector2.cpp  Video.cpp  Video.h  main.cpp  sample.cpp
OpenCV_practice/include/: LibraryAPI.h  NetworkError.h  SocketConnection.h
OpenCV_practice/lib/: NetworkLibrary.lib
RobotController/BasicController/: BasicController.ino
RobotController/Controller/: Controller.ino
RobotController/TestBoard/: TestBoard.ino
RobotController/TestMotor/: TestMotor.ino
RobotController/festival_ver/: festival_ver.ino
RobotNetworkRelay/: RobotNetworkRelay.sln
(+9 files in other folders)
